--- a/hw2/main.vcxproj.filters
+++ b/hw2/main.vcxproj.filters
@@ -4,21 +4,30 @@
     <ClCompile Include="source\App.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="source\RtAudio.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="source\App.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-  </ItemGroup>
-  <ItemGroup>
-    <ResourceCompile Include="resources.rc" />
+    <ClInclude Include="source\RtAudio.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="mainpage.dox" />
     <None Include="Doxyfile" />
     <None Include="journal\journal.dox" />
-    <None Include="data-files\test.Scene.Any">
-      <Filter>Scene Files</Filter>
+    <None Include="data-files\shader\rawAudioVisualize.pix">
+      <Filter>Shader Files</Filter>
+    </None>
+    <None Include="data-files\shader\visualizeLines.pix">
+      <Filter>Shader Files</Filter>
+    </None>
+    <None Include="data-files\shader\visualizeLines.vrt">
+      <Filter>Shader Files</Filter>
     </None>
   </ItemGroup>
   <ItemGroup>
