--- a/hw2/main.vcxproj.filters
+++ b/hw2/main.vcxproj.filters
@@ -7,12 +7,18 @@
     <ClCompile Include="source\RtAudio.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="source\chuck_fft.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="source\App.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="source\RtAudio.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="source\chuck_fft.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
