--- a/hw2/main.vcxproj
+++ b/hw2/main.vcxproj
@@ -57,7 +57,7 @@
       </AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
-      <SubSystem>Console</SubSystem>
+      <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalLibraryDirectories>
       </AdditionalLibraryDirectories>
@@ -84,10 +84,12 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <RandomizedBaseAddress>false</RandomizedBaseAddress>
+      <AdditionalDependencies>dsound.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="source\App.h" />
+    <ClInclude Include="source\AudioParticleSystem.h" />
     <ClInclude Include="source\chuck_fft.h" />
     <ClInclude Include="source\RtAudio.h" />
   </ItemGroup>
@@ -97,7 +99,10 @@
     <ClCompile Include="source\RtAudio.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="data-files\shader\rawAudioVisualize.pix" />
+    <None Include="data-files\scene\visualizer.Scene.Any" />
+    <None Include="data-files\shader\flatColor.pix" />
+    <None Include="data-files\shader\visualizeFrequencyMagnitude.pix" />
+    <None Include="data-files\shader\visualizeFrequencyMagnitude.vrt" />
     <None Include="data-files\shader\visualizeLines.pix" />
     <None Include="data-files\shader\visualizeLines.vrt" />
     <None Include="Doxyfile" />
