--- a/hw2/main.vcxproj
+++ b/hw2/main.vcxproj
@@ -100,7 +100,13 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="data-files\scene\visualizer.Scene.Any" />
+    <None Include="data-files\shader\audioTextureHelpers.glsl" />
+    <None Include="data-files\shader\cubescape.pix" />
     <None Include="data-files\shader\flatColor.pix" />
+    <None Include="data-files\shader\fractalLand.pix" />
+    <None Include="data-files\shader\shadertoyFooter.glsl" />
+    <None Include="data-files\shader\shadertoyHeader.glsl" />
+    <None Include="data-files\shader\sunShader.pix" />
     <None Include="data-files\shader\visualizeFrequencyMagnitude.pix" />
     <None Include="data-files\shader\visualizeFrequencyMagnitude.vrt" />
     <None Include="data-files\shader\visualizeLines.pix" />
