--- a/hw2/main.vcxproj.filters
+++ b/hw2/main.vcxproj.filters
@@ -47,6 +47,24 @@
     <None Include="data-files\scene\visualizer.Scene.Any">
       <Filter>Scene Files</Filter>
     </None>
+    <None Include="data-files\shader\sunShader.pix">
+      <Filter>Shader Files</Filter>
+    </None>
+    <None Include="data-files\shader\audioTextureHelpers.glsl">
+      <Filter>Shader Files</Filter>
+    </None>
+    <None Include="data-files\shader\cubescape.pix">
+      <Filter>Shader Files</Filter>
+    </None>
+    <None Include="data-files\shader\shadertoyHeader.glsl">
+      <Filter>Shader Files</Filter>
+    </None>
+    <None Include="data-files\shader\shadertoyFooter.glsl">
+      <Filter>Shader Files</Filter>
+    </None>
+    <None Include="data-files\shader\fractalLand.pix">
+      <Filter>Shader Files</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Source Files">
