--- a/hw2/main.vcxproj.filters
+++ b/hw2/main.vcxproj.filters
@@ -65,6 +65,9 @@
     <None Include="data-files\shader\fractalLand.pix">
       <Filter>Shader Files</Filter>
     </None>
+    <None Include="data-files\shader\eye.pix">
+      <Filter>Shader Files</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Source Files">
